css: fix top navbar background on small screen sizes.

--- a/css/m-components.css
+++ b/css/m-components.css
@@ -125,7 +125,7 @@ code {
 body > header > nav {
   width: 100%;
   background-color: var(--header-background-color);
-  height: 3rem;
+  min-height: 3rem;
 }
 body > header > nav.m-navbar-landing,
 body > header > nav.m-navbar-jumbo {
